# redisml

./: :  CLAUDE.md  README.md  codecrafters_redis.opam  dune  dune-project  your_program.sh
docs/: PHANTOM_TYPES.md
lib/: command.ml  command.mli  dune  resp.ml  resp.mli
lib/client/: client.ml  client.mli  command.ml  command.mli  dune
lib/databases/: databases.ml  databases.mli  dune
lib/evaluator/: command.ml  command.mli  dune  evaluator.ml  evaluator.mli
lib/redis/: database.mli  debouncer.ml  debouncer.mli  dune  master_command.ml  master_command.mli  rdb.ml  rdb.mli  redis.ml  redis.mli  slave_client.ml  slave_client.mli
lib/resp/: dune  resp.ml  resp.mli
lib/slave_client/: dune  slave_client.ml  slave_client.mli
src/: buffer_reader.ml  buffer_reader.mli  command.ml  command.mli  config.ml  config.mli  constants.ml  database.ml  database.mli  main.ml  master_command.ml  master_command.mli  master_connection.ml  master_connection.mli  peer_conn.ml  peer_conn.mli  protocol.ml  protocol.mli  rdb.ml  rdb.mli  repl_command.ml  repl_command.mli  replica_manager.ml  replica_manager.mli  resp.ml  resp_helpers.ml  resp_helpers.mli  result_syntax.ml  result_syntax.mli  storage.ml  storage.mli  typed_state.ml  typed_state.mli  user_command.ml  user_command.mli  validation.ml  validation.mli
test/: command_test.ml  database_test.ml  dune  rdb_test.ml  resp_test.ml  storage_test.ml  test_helpers.ml  test_helpers.mli
tests/: dune  test_redis.ml
