(include_subdirs unqualified)

(library
 (name codecrafters_redis)
 (libraries unix lwt lwt.unix)
 (preprocess (pps lwt_ppx))
 (modules :standard \ main \ user_command \ repl_command))

(executable
 (name main)
 (public_name redis-server)
 (package codecrafters_redis)
 (libraries codecrafters_redis unix lwt lwt.unix)
 (preprocess (pps lwt_ppx))
 (modules main))
